[package]
name = "vkot"
version = "0.1.0"
authors = ["asrcpq <asrcpq@gmail.com>"]
edition = "2018"

[dependencies]
winit = "0.27"
anyhow = "1"

ttri = {path = "../ttri"}
ttri_mono = {path = "../ttri_mono"}
vkot_client = {path = "../vkot_client"}
vkot_common = {path = "../vkot_common"}
skey = {path = "../skey", features = ["winit"]}
